
 * Extends Tag supports now multiple inheritance
 * Clean up code, change all variables and methods to camelCase
 
 
* 0.9.1 (2012-05-12)

 * Initial release