@@ -1,0 +1,6 @@
+{% comment %} This is the child template. {% endcomment %}
+{% extends "base.tpl" %}
+
+{% block footer %}
+	{{ document.copyright }}
+{% endblock %}
