@@ -1,11 +1,7 @@
 {% comment %} This is the child template. {% endcomment %}
-{% extends "base" %}
+{% extends "blocks/child.tpl" %}
 
 {% block content %}
 	<h2>Entry one</h2>
     <p>This is my first entry.</p>
-{% endblock %}
-
-{% block footer %}
-	{{ document.copyright }}
 {% endblock %}
